# OReilly-2026-01January-python

./: 2026-01January-06.html  2026-01January-06.ipynb  2026-01January-13.html  2026-01January-13.ipynb  2026-01January-20.html  2026-01January-20.ipynb  2026-01January-27.html  2026-01January-27.ipynb  2026-02February-03.ipynb  config.txt  menu.py  myfile.txt  mymod.py  pyproject.toml
